--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,71 @@
 	<div class="attribution">Template by <a href="http://www.medialoot.com/item/lumino-admin-bootstrap-template/">Medialoot</a></div>
 </div><!--/.sidebar-->
 
+<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
+	<div class="row">
+		<ol class="breadcrumb">
+			<li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+			<li class="active">首页</li>
+		</ol>
+	</div><!--/.row-->
+
+	<div class="row">
+		<div class="col-lg-12">
+			<h1 class="page-header">首页</h1>
+		</div>
+	</div><!--/.row-->
+
+
+	<div class="row">
+		<div class="col-md-12">
+			<div class="panel panel-default chat">
+				<div class="panel-heading" id="accordion"><span class="glyphicon glyphicon-comment"></span>简介</div>
+
+				<div class="panel-body">
+					<ul>
+						<li class="left clearfix">
+								<span class="chat-img pull-left">
+									<img src="http://placehold.it/80/30a5ff/fff" alt="User Avatar" class="img-circle" />
+								</span>
+							<div class="chat-body clearfix">
+								<div class="header">
+									<strong class="primary-font">收视频道</strong>
+								</div>
+								<p>每一天设备在线数量趋势图,以天为间隔单位</p>
+								<p>收视频道Top（次数),从低到高排列</p>
+							</div>
+						</li>
+						<li class="left clearfix">
+								<span class="chat-img pull-left">
+									<img src="http://placehold.it/80/30a5ff/fff" alt="User Avatar" class="img-circle" />
+								</span>
+							<div class="chat-body clearfix">
+								<div class="header">
+									<strong class="primary-font">节目收看</strong>
+								</div>
+								<p>单用户平均换台次数</p>
+								<p>收视时长趋势图,根据时间来统计,单位秒</p>
+							</div>
+						</li>
+						<li class="left clearfix">
+								<span class="chat-img pull-left">
+									<img src="http://placehold.it/80/30a5ff/fff" alt="User Avatar" class="img-circle" />
+								</span>
+							<div class="chat-body clearfix">
+								<div class="header">
+									<strong class="primary-font">购买情况</strong>
+								</div>
+								<p>每一天、每一季度、每一年的购买情况，购买发生了几次</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+
+			</div>
+		</div><!--/.col-->
+	</div><!--/.row-->
+</div>	<!--/.main-->
+
 <script>
 	!function ($) {
 		$(document).on("click","ul.nav li.parent > a > span.icon", function(){
