--- a/src/main/webapp/webpage/channelTune.html
+++ b/src/main/webapp/webpage/channelTune.html
@@ -83,7 +83,7 @@
                         <em class="glyphicon glyphicon-align-left glyphicon-l"></em>
                     </div>
                     <div class="col-sm-9 col-lg-7 widget-right get-div" id="deviceOnline">
-                        <div class="large">设备在线数量趋势分析</div>
+                        <div class="large">设备在线数量分析</div>
                     </div>
                 </div>
             </div>
