--- a/src/main/webapp/webpage/channelTune.html
+++ b/src/main/webapp/webpage/channelTune.html
@@ -5,6 +5,7 @@
     <link href="../lib/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="../static/css/styles.css" rel="stylesheet">
+    <link href="../static/css/channelTune.css" rel="stylesheet">
 
     <script src='../lib/js/jquery-1.8.0.min.js' type='text/javascript'></script>
     <script src="../lib/js/bootstrap.min.js" type='text/javascript'></script>
@@ -114,6 +115,14 @@
                         <em class="glyphicon glyphicon-chevron-left glyphicon-m" id="purchase-before"></em>
                         <em class="glyphicon glyphicon-chevron-right glyphicon-m" id="purchase-after"></em>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-12">
+            <div class="panel panel-default" id = "pie-for-top">
+                <div class="panel-heading">饼图</div>
+                <div class="panel-body">
+                    <div id = "pieContainer"></div>
                 </div>
             </div>
         </div>
