--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 	<link href="lib/css/bootstrap.min.css" rel="stylesheet">
 
 	<link href="static/css/styles.css" rel="stylesheet">
-	<link href="static/css/index.css">
+	<link href="static/css/index.css" rel="stylesheet">
 
 	<script src='lib/js/jquery-1.8.0.min.js' type='text/javascript'></script>
 	<script src="lib/js/bootstrap.min.js" type='text/javascript'></script>
@@ -75,7 +75,7 @@
 					<ul>
 						<li class="left clearfix">
 								<span class="chat-img pull-left">
-									<img src="http://placehold.it/80/30a5ff/fff" alt="User Avatar" class="img-circle" />
+									<img src="static/img/doge1.gif" alt="User Avatar" class="img-circle" />
 								</span>
 							<div class="chat-body clearfix">
 								<div class="header">
@@ -87,19 +87,19 @@
 						</li>
 						<li class="left clearfix">
 								<span class="chat-img pull-left">
-									<img src="http://placehold.it/80/30a5ff/fff" alt="User Avatar" class="img-circle" />
+									<img src="static/img/doge2.gif" alt="User Avatar" class="img-circle" />
 								</span>
 							<div class="chat-body clearfix">
 								<div class="header">
 									<strong class="primary-font">节目收看</strong>
 								</div>
 								<p>单用户平均换台次数</p>
-								<p>收视时长趋势图,根据时间来统计,单位秒</p>
+								<p>收视时长趋势图,根据时间来统计,单位/小时</p>
 							</div>
 						</li>
 						<li class="left clearfix">
 								<span class="chat-img pull-left">
-									<img src="http://placehold.it/80/30a5ff/fff" alt="User Avatar" class="img-circle" />
+									<img src="static/img/doge3.gif" alt="User Avatar" class="img-circle" />
 								</span>
 							<div class="chat-body clearfix">
 								<div class="header">
